# libanatomy

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
content/: CONTENT.MD  README.MD  ana_terms-en.csv  ana_terms-en_GB.csv  ana_terms-es.csv  ana_terms-it.csv  ana_terms-la.csv  ana_terms-pl.csv  ana_terms_definitions.csv  ta_map.json
data-resources/: DATA-RESOURCES.MD  README.MD  ana_terms-en.csv  ana_terms-en_GB.csv  ana_terms-es.csv  ana_terms-it.csv  ana_terms-la.csv  ana_terms-pt.csv  ana_terms.csv  ana_terms_full.csv
dev-resources/: CMakeLists.txt  DEV-RESOURCES.MD  README.MD  ana_terms-de.json  ana_terms-en.json  ana_terms-en_GB.json  ana_terms-es.json  ana_terms-fr.json  ana_terms-it.json  ana_terms-la.json  ana_terms-nl.json  ana_terms-pl.json  ana_terms-pt.json  ana_terms-zh.json
dev-resources/cpp/: CMakeLists.txt  anata1.cpp  anata1.h  anata2.cpp  anata2.h  anaterm.cpp  anaterm.h  anatermid.cpp  anatermid.h  anatermstrings.cpp  anatermstrings.h  anatomy.cpp  anatomy.h  qudefs.h  qutools.cpp  qutools.h  qutree.h  quuidtree.h
dev-resources/qt/: CMakeLists.txt  anatomyqt.h  anqaboutdialog.cpp  anqaboutdialog.h  anqcsv.cpp  anqcsv.h  anqfilewidget.cpp  anqfilewidget.h  anqinfolabel.cpp  anqinfolabel.h  anqjson.cpp  anqjson.h  anqta1tree.cpp  anqta1tree.h  anqta2tree.cpp  anqta2tree.h  anqtermstree.cpp  anqtermstree.h  anqtools.cpp  anqtools.h  anqtreewidget.cpp  anqtreewidget.h
sources/: README.MD  SOURCES.MD
sources/ta/: ta-map.json  ta1-en.json  ta1-es.json  ta1-la.json  ta2.json
tools/: CMakeLists.txt
tools/AnaGenerator/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  termseditor.cpp  termseditor.h  transeditor.cpp  transeditor.h
tools/AnaTranslator/: CMakeLists.txt  anatrfile.cpp  anatrfile.h  icons.qrc  (+17 more)
(+20 files in other folders)
